--- a/lemon_hooks/tsconfig.json
+++ b/lemon_hooks/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "declaration": false,
     "noImplicitAny": false,
-    "jsx": "react",
+    "jsx": "react", // tsx  JSX => tsx 
     "sourceMap": true,
     "noLib": false,
     "suppressImplicitAnyIndexErrors": true
