--- a/react_blog/service/package.json
+++ b/react_blog/service/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-cors": "^2.2.3",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0"
   },
@@ -24,10 +25,9 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-service",
-    "stop": "egg-scripts stop --title=egg-server-service",
+    "start": "egg-scripts start --daemon --title=egg-server-",
+    "stop": "egg-scripts stop --title=egg-server-",
     "dev": "egg-bin dev",
-    "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
