--- a/react_blog/service/package.json
+++ b/react_blog/service/package.json
@@ -28,6 +28,7 @@
     "start": "egg-scripts start --daemon --title=egg-server-",
     "stop": "egg-scripts stop --title=egg-server-",
     "dev": "egg-bin dev",
+    "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
